# wiretap-mocks

./: README.md  main.py  pyproject.toml
src/wiretap/: __init__.py  ledger.py  wiretap.py
tests/: requirements.txt  test_ledger.py  test_wiretap.py  utils.py
tests/approvals/: test_ledger.ledger_can_log_calls.approved.txt  test_ledger.ledger_can_log_method_calls.approved.txt  test_ledger.wiretaps_report_events_to_ledgers.approved.txt
